[tool.poetry]
name = "auto-reviewer"
version = "0.1.0"
description = ""
authors = ["agis09"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
